# ngxmgr

./: Makefile  README.md  REQUIREMENTS.md  example_config.json  pyproject.toml
src/ngxmgr/: __init__.py  main.py
src/ngxmgr/aws/: __init__.py  asg.py
src/ngxmgr/commands/: __init__.py  copy.py  install.py  logs.py  maintenance.py  remove.py  script.py  service.py
src/ngxmgr/config/: __init__.py  loader.py  models.py
src/ngxmgr/operations/: __init__.py  nginx.py
src/ngxmgr/ssh/: __init__.py  client.py
src/ngxmgr/utils/: __init__.py  executor.py  logging.py  shell.py
tests/: __init__.py
tests/unit/: __init__.py  test_config.py  test_copy.py  test_script.py  test_shell.py
